dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/greq.c)
PACKAGE=greq
MAJOR_VERSION=0
MINOR_VERSION=9
MICRO_VERSION=1
EXTRA_VERSION=
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.
dnl Checks for typedefs, structures, and compiler characteristics.
dnl Checks for library functions.
AM_PATH_GLIB(1.2.6,,
        AC_MSG_ERROR(Test for GLIB failed. See the file 'INSTALL' for help.),
        gthread)
AM_PATH_GTK(1.2.6,,
        AC_MSG_ERROR(Test for GTK failed. See the file 'INSTALL' for help.))

AC_OUTPUT([
	Makefile
	greq.spec
	src/Makefile
	src/version.h
])
